hopefully fix chatbox placement behind chatbox for some users.

--- a/app/components/Sidebar/Chat/Chat.scss
+++ b/app/components/Sidebar/Chat/Chat.scss
@@ -62,6 +62,7 @@ $chat-item-color: #c0c0c0; //light skin #000
   height: 92%; //23
   overflow-x: hidden;
   overflow-y: auto;
+  margin-bottom:1px;
 }
 
 #chatscroll::-webkit-scrollbar {
@@ -218,7 +219,8 @@ $chat-item-color: #c0c0c0; //light skin #000
   position: absolute;
   width: 98.5%;
   left: .75%;
-
+  margin-top:1px;
+  padding-top:1px;
   position: absolute;
   bottom: .75vh;
 }
